--- a/src/components/CallToAction/CallToAction.module.css
+++ b/src/components/CallToAction/CallToAction.module.css
@@ -1,10 +1,9 @@
 
 .callToActionSection {
   text-align: center;
-  padding: 4.5rem 0;
+  padding: 4.5rem 1rem;
   background: var(--custom-section-color);
   box-shadow: 0 2px 16px rgba(0,0,0,0.06);
-
 }
 
 
